# FPSE-Final

./: .gitignore  README.md  RULES.md  bisect152677199.coverage  bisect350286145.coverage  bisect403206943.coverage  bisect468738329.coverage  bisect499265745.coverage  bisect682214106.coverage  bisect719995166.coverage  bisect756281684.coverage  bisect898389039.coverage  dune-project  package-lock.json
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/47e007fefa63695257b4d9874e3138b7/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/ecf090c8fb7f28d4b9cf50ba9610db04/: dune__exe___ppx.cmo
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/src/: card.cma  card.cmxa  card.cmxs  card.ml  card.pp.ml  card.pp.mli  cpu.cma  cpu.cmxa  cpu.cmxs  cpu.ml  cpu.mli  cpu.pp.ml  cpu.pp.mli  deck.cma  deck.cmxa  deck.cmxs  deck.ml  deck.pp.ml  deck.pp.mli  player.cma  player.cmxa  player.cmxs  player.ml  player.mli  player.pp.ml  player.pp.mli  run_game.ml  uno_card.cma  uno_card.cmxa  uno_card.cmxs  uno_card.ml  uno_card.pp.ml
_build/default/src/.card.objs/byte/: card.cmi  card.cmo  card.cmt  card.cmti
_build/default/src/.card.objs/native/: card.cmx
_build/default/src/.cpu.objs/byte/: cpu.cmi  cpu.cmo  cpu.cmt  cpu.cmti
_build/default/src/.cpu.objs/native/: cpu.cmx
_build/default/src/.deck.objs/byte/: deck.cmi  deck.cmo  deck.cmt  deck.cmti
_build/default/src/.deck.objs/native/: deck.cmx
_build/default/src/.merlin-conf/: exe-run_game  lib-card  lib-cpu  lib-deck  lib-player  lib-uno_card
_build/default/src/.player.objs/byte/: player.cmi  player.cmo  player.cmt  player.cmti
_build/default/src/.player.objs/native/: player.cmx
_build/default/src/.run_game.eobjs/byte/: dune__exe__Run_game.cmi  dune__exe__Run_game.cmti
_build/default/src/.run_game.eobjs/native/: dune__exe__Run_game.cmx
_build/default/src/.uno_card.objs/byte/: uno_card.cmi  uno_card.cmo  uno_card.cmt
_build/default/src/.uno_card.objs/native/: uno_card.cmx
_build/default/test/: bisect187490265.coverage  bisect369493596.coverage  bisect898084668.coverage  card_tests.cma  card_tests.cmxa  card_tests.cmxs  card_tests.ml  card_tests.pp.ml  cpu_tests.cma  cpu_tests.cmxa  cpu_tests.cmxs  cpu_tests.ml  deck_tests.cma  deck_tests.cmxa  deck_tests.cmxs  deck_tests.ml  deck_tests.pp.ml  oUnit-UNO IMPLEMENTATION TESTS.cache  player_tests.cma  player_tests.cmxa  player_tests.cmxs  player_tests.ml  tests.ml  uno_card_tests.cma  uno_card_tests.cmxa  uno_card_tests.cmxs  uno_card_tests.ml
_build/default/test/.card_tests.objs/byte/: card_tests.cmi  card_tests.cmo  card_tests.cmt
_build/default/test/.card_tests.objs/native/: card_tests.cmx
_build/default/test/.cpu_tests.objs/byte/: cpu_tests.cmi  cpu_tests.cmo  cpu_tests.cmt
_build/default/test/.cpu_tests.objs/native/: cpu_tests.cmx
_build/default/test/.deck_tests.objs/byte/: deck_tests.cmi  deck_tests.cmo  deck_tests.cmt
_build/default/test/.deck_tests.objs/native/: deck_tests.cmx
_build/default/test/.merlin-conf/: exe-tests  lib-card_tests  lib-cpu_tests  lib-deck_tests  lib-player_tests  lib-uno_card_tests
_build/default/test/.player_tests.objs/byte/: player_tests.cmi  player_tests.cmo  player_tests.cmt
_build/default/test/.player_tests.objs/native/: player_tests.cmx
_build/default/test/.tests.eobjs/byte/: dune__exe__Tests.cmi  dune__exe__Tests.cmti
_build/default/test/.tests.eobjs/native/: dune__exe__Tests.cmx
_build/default/test/.uno_card_tests.objs/byte/: uno_card_tests.cmi  uno_card_tests.cmo  uno_card_tests.cmt
_build/default/test/.uno_card_tests.objs/native/: uno_card_tests.cmx
_coverage/: index.html
_coverage/src/: algorithm.ml.html  card.ml.html  cpu.ml.html  deck.ml.html  game.ml.html  player.ml.html  uno_card.ml.html
src/: algorithm.md  algorithm.ml  algorithm.mli  bisect27249017.coverage  bisect940693475.coverage  card.ml  card.mli  cpu.ml  cpu.mli  deck.ml  deck.mli  dune  game.ml  game.mli  player.ml  player.mli  run_game.ml  uno_card.ml
test/: algorithm_tests.ml  cpu_tests.ml  deck_tests.ml  dune  game_tests.ml  tests.ml
uno-fpse-final/: index.html  package-lock.json  package.json  rescript.json
uno-fpse-final/src/: App.res  App.res.mjs  Button.res  Button.res.mjs
uno-fpse-final/src/components/: Game.res  Game.res.mjs  StartBackground.res  StartBackground.res.mjs
