(library
 (name card)
 (modules card)
 (libraries core)
)

(library
 (name uno_card)
 (modules uno_card)
 (libraries card)
)

(library
 (name deck)
 (modules deck)
 (libraries core card)
)

(library
 (name cpu)
 (modules cpu)
 (libraries core card)
)

(library
  (name player)
  (modules player)
  (libraries core card)
)

(library
  (name algorithm)
  (modules algorithm)
  (libraries core card cpu)
)

(library
  (name game)
  (modules game)
  (libraries core card cpu player algorithm deck)
)
