(library
 (name card)
 (modules card)
 (libraries core)
 (preprocess (pps ppx_jane))
)

(library
 (name uno_card)
 (modules uno_card)
 (libraries card)
 (preprocess (pps ppx_jane))
)

(library
 (name deck)
 (modules deck)
 (libraries core card uno_card)
)

(library
 (name cpu)
 (modules cpu)
 (libraries core card uno_card deck)
)

(library
  (name player)
  (modules player)
  (libraries core card uno_card)
)

; (library
;   (name algorithm)
;   (modules algorithm)
;   (libraries core card cpu)
; )

; (library
;   (name game)
;   (modules game)
;   (libraries core card cpu player algorithm deck)
; )
