(library
 (name card)
 (modules card)
 (libraries core)
 (preprocess (pps ppx_jane bisect_ppx)))

(library
 (name uno_card)
 (modules uno_card)
 (libraries card)
 (preprocess (pps ppx_jane bisect_ppx)))

(library
 (name deck)
 (modules deck)
 (libraries core card uno_card)
 (preprocess (pps bisect_ppx)))

(library
 (name cpu)
 (modules cpu)
 (libraries core card uno_card deck)
 (preprocess (pps bisect_ppx)))

(library
  (name player)
  (modules player)
  (libraries core card uno_card)
  (preprocess (pps bisect_ppx)))

(executable
 (name run_game)
 (modules run_game)
 (libraries
   core
   dream
   lwt.unix
   card
   uno_card
   deck
   cpu
   player
   game)
)

; (library
;   (name algorithm)
;   (modules algorithm)
;   (libraries core card cpu)
; )

(library
  (name game)
  (modules game)
  (libraries core card uno_card cpu player deck)
)
