(library
 (name card_tests)
 (modules card_tests)
 (libraries core ounit2 card)
 (preprocess (pps ppx_jane)))

(library
 (name deck_tests)
 (modules deck_tests)
 (libraries core ounit2 deck)
 (preprocess (pps ppx_jane)))

(library
 (name uno_card_tests)
 (modules uno_card_tests)
 (libraries core ounit2 card uno_card))

(library
 (name player_tests)
 (modules player_tests)
 (libraries core ounit2 player uno_card))

(library
 (name cpu_tests)
 (modules cpu_tests)
 (libraries core ounit2 cpu uno_card))

(library
 (name game_tests)
 (modules game_tests)
 (libraries core ounit2 game cpu player uno_card deck))

(library
 (name algorithm_tests)
 (modules algorithm_tests)
 (libraries core ounit2 algorithm uno_card cpu player))

(test 
 (name tests)
 (modules tests)
 (libraries core ounit2 card_tests deck_tests uno_card_tests player_tests cpu_tests game_tests algorithm_tests))